Create flush cache endpoint
