# app/Http/Controllers/IndexController.php
@@ -5,9 +5,20 @@ namespace App\Http\Controllers;
 /**
  * @OA\GET(
  *     path="/",
- *     tags={"version"},
+ *     tags={"main"},
  *     summary="Version",
  *     description="View this application version.",
+ *     @OA\Response(
+ *         response="default",
+ *         description="200"
+ *     )
+ * )
+ *
+ * @OA\GET(
+ *     path="/flush",
+ *     tags={"main"},
+ *     summary="Clear Cache",
+ *     description="Clear cache storage, hit this endpoint if some of the api can't be accessed",
  *     @OA\Response(
  *         response="default",
  *         description="200"
